<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uRate</string>
    <string name="menu_delete_category">Delete Category</string>
    <string name="menu_delete_item">Delete Item</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_item_detail">Detail</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_name">Name</string>
    <string name="text_address">Address</string>
    <string name="text_notes">Notes</string>
    <string name="item_image_description">Item Image</string>
    <string name="icon_name_description">Name</string>
    <string name="icon_category_description">Category</string>
    <string name="icon_address_description">Address</string>
    <string name="icon_map_description">Go to Map</string>
    <string name="icon_notes_description">Notes</string>
    <string name="title_activity_map">Map</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="mylocation_button">Here is the location toggle</string>

</resources>
