<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="everton.urate.ItemDetailActivity">


    <ImageView
        android:id="@+id/iv_item_detail"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/et_name_item"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/iv_item_detail"
        android:hint="@string/text_name"/>

    <Spinner
        android:id="@+id/spin_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_name_item"
        android:theme="@android:style/Theme.Holo.Light"/>
        <!--android:entries="@array/category_array"-->


    <LinearLayout
        android:id="@+id/address_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spin_category"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_address"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_address"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/ib_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_geo_fence"
            android:background="@android:color/transparent"
            android:layout_weight="0"/>
    </LinearLayout>

    <RatingBar
        android:id="@+id/rb_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_line"
        android:layout_alignParentLeft="true"
        android:numStars="3"/>

    <EditText
        android:id="@+id/et_notes"
        android:inputType="textMultiLine"
        android:lines="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rb_rate"
        android:layout_alignParentLeft="true"
        android:hint="@string/text_notes"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btn_save"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_edit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
